<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">VIA Tracker</string>

	<string name="title_login">User login</string>
	<string name="login_email">E-mail</string>
	<string name="login_password">Password</string>
	<string name="login_remember">Remember me</string>
	<string name="login_submit">Log in</string>
	<string name="login_logout">Log out</string>

	<string name="refresh">Refresh</string>
	<string name="create">New</string>
	<string name="edit">Edit</string>
	<string name="filter">Filter</string>
	<string name="save">Save</string>

	<string name="title_issue_list">Issues</string>
	<string name="title_issue_detail">Issue Detail</string>
	<string name="issue_create">New issue</string>
	<string name="issue_edit">Edit issue</string>
	<string name="issue_id">User ID</string>
	<string name="issue_title">Title</string>
	<string name="issue_description">Description</string>
	<string name="issue_priority">Priority</string>
	<string name="issue_createdByUser">Created by user</string>
	<string name="issue_state">State</string>
	<string name="issue_timestamp">Created date</string>
	<string name="issue_save_success">Issue saved successfully.</string>
	<string name="issue_filter">Filter issues:</string>
	<string name="issue_filter_none">All</string>

	<string name="issueState_open">Open</string>
	<string name="issueState_inProgress">In progress</string>
	<string name="issueState_fixed">Fixed</string>
	<string name="issueState_wontFix">Won\'t fix</string>

	<string name="title_user_list">Users</string>
	<string name="title_user_detail">User Detail</string>
	<string name="user_create">New user</string>
	<string name="user_edit">Account edit</string>
	<string name="user_id">User ID</string>
	<string name="user_firstName">First name</string>
	<string name="user_lastName">Last name</string>
	<string name="user_email">E-mail</string>
	<string name="user_pw1">Password</string>
	<string name="user_pw2">Password again</string>
	<string name="user_save_success">User saved successfully.</string>

	<string name="account_edit">Edit account</string>

	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>

	<string name="err_login_failed">Login failed, invalid credentials.</string>
	<string name="err_issue_save_failed">Saving an issue has failed.</string>
	<string name="err_issue_is_empty">Title must not be empty.</string>
	<string name="err_user_save_failed">Saving a user has failed.</string>
	<string name="err_user_is_empty">First name and e-mail must not be empty.</string>
	<string name="err_user_pw_match">Passwords doesn\'t match.</string>

</resources>
