<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	tools:context=".IssueDetailFragment">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:orientation="vertical">

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_id"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_title"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_description"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_priority"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_priority"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_createdByUser"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_createdByUser"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_state"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_timestamp"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_timestamp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

	</LinearLayout>
</ScrollView>
