<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".IssueModifyFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_title"/>
		<EditText
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:inputType="text"
			android:imeOptions="actionNext"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_description"/>
		<EditText
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/issue_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:inputType="textMultiLine"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_state"/>
		<Spinner
			style="?android:attr/spinnerStyle"
			android:id="@+id/issue_state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/issue_priority"/>
		<SeekBar
			style="?android:attr/seekBarStyle"
			android:id="@+id/issue_priority"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"/>

		<Button
			style="?android:attr/textAppearanceMedium"
			android:id="@+id/issue_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:textStyle="bold"
			android:text="@string/save"/>

    </LinearLayout>
</ScrollView>
