<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	tools:context=".UserDetailFragment">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:orientation="vertical">

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/user_id"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/user_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/user_firstName"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/user_firstName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/user_lastName"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/user_lastName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

		<TextView
			style="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:textStyle="bold"
			android:text="@string/user_email"/>
		<TextView
			style="?android:attr/textAppearanceLarge"
			android:id="@+id/user_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:paddingLeft="8dp"
			android:textIsSelectable="true"/>

	</LinearLayout>
</ScrollView>
